static_global/css/index.css
/* ... */
.help{
    position: absolute;
    bottom: 3rem;
    color: var(--accentCol);
    font-weight: bolder;
    font-family: inherit;
    padding: 1rem 1rem 0 1rem;
}

.setting-wrapper{
    padding: 0.3rem 1rem 1.2rem 1rem;
	border-bottom: 1px solid rgba(0,0,0,0.3);
}

.setting-wrapper:nth-child(6){
	border-bottom: none;
}

.form-select{
    min-width: 200px;
    padding: 7px 40px 7px 12px;
    width: 100%;
    border: 1px solid var(--borderColor);
    border-radius: 5px;
    background: var(--blackLight);
    box-shadow: 0 1px 3px -2px #313234;
    cursor: pointer;
    font-family: inherit;
    font-size: 1rem;
    color: var(--textCol);
    transition: all 150ms ease;
    overflow-y: hidden;
}

.form-select:hover{
    background: var(--blackFlag);
}

.form-select option {
    color: var(--textCol);
    background: var(--sidebarCol);
    padding: 0.5rem;
}

.form-select option:hover{
    background: var(--sidebarColDark);
}

.setting-wrapper.compact{
    padding: 0.5rem 1rem 0.5rem 1rem;
	display: flex;
}

.compact .setting-field{
    align-items: center;
	align-content: center;
	display: flex;
	flex-grow: 1;
	justify-content: flex-end;
}

.setting-header {
	padding: 0;
	min-height: 2.5rem;
	padding-top: 0.5rem;
	color: var(--textCol);
    text-transform: uppercase;
    font-weight: bolder;
}

.ColorPicker {
	display: block;
	width: 2em;
	height: 2em;
	outline: none !important;
	border: 1px solid rgba(0,0,0,.3);
	border-radius: 4px;
	color: transparent;
	box-shadow: 0px 0px 0px 1px inset rgba(255,255,255,0.4);
	cursor: pointer;
	user-select: none;
}

body, button, button:before {
	text-shadow: var(--rescueShade);
}

.ResetButton {
	margin-top: 1em;
	font-size: 12px;
	text-align: center;
	text-transform: uppercase;
	letter-spacing: 0.07em;
	font-family: "Open Sans";
	text-shadow: var(--rescueShade);
	border: 1px solid var(--borderColor);
	border-radius: 2px;
	overflow: hidden;
	box-shadow: 0 2px 3px -1px rgba(0,0,0,0.3);
	color: var(--textCol);
	background-color: var(--sidebarColDark);
	padding: 0.4rem 1.6rem;
}

/* pcr-overrides */

.pcr-app[data-theme=nano] .pcr-selection .pcr-color-chooser {
    grid-area: 2/1/2/span 2 !important; 
}


.pcr-app[data-theme=nano] .pcr-swatches {
    display: none !important;
}


/* nano.min.css | https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/nano.min.css */

.pcr-app {
	background: #33383d;
}

.pcr-app .pcr-interaction .pcr-save {
	background: #b2dffb;
}

.pcr-app .pcr-interaction .pcr-cancel, .pcr-app .pcr-interaction .pcr-clear, .pcr-app .pcr-interaction .pcr-save {
	color: black;
	font-family: "Open Sans";
}

.pcr-app .pcr-interaction input {
	letter-spacing: unset; 
	font-size: 0.8rem;
	border-radius: unset; 
	padding: unset; 
	margin-top: unset; 
	padding: .45em 1.1em;
}

.pcr-app .pcr-interaction > * {
	margin: unset;
}

.pcr-app .pcr-interaction {
	margin: unset;
	align-items: stretch;
	overflow: hidden;
	border-bottom-right-radius: 4px;
	border-bottom-left-radius: 4px;
}

.pcr-app[data-theme="nano"] .pcr-interaction {
	padding: unset;
	/* height: 2.1rem; */
	margin-bottom: -5px;
}

.pcr-app[data-theme="nano"]{
    height: max-content;
}

.pcr-app .pcr-interaction .pcr-result {
	border-radius: unset;
	background: #292d31;
	color: #eee;
	outline: none !important;
	box-shadow: none !important;
}

.pcr-app[data-theme="nano"] .pcr-selection .pcr-color-palette .pcr-palette {
	border-radius: unset;
	border-top-left-radius: 4px;
	border-top-right-radius: 4px;
}

.pcr-app[data-theme="nano"] .pcr-selection .pcr-color-chooser, .pcr-app[data-theme="nano"] .pcr-selection .pcr-color-opacity {
	margin: .2em .8em;
}

.disabled {
	opacity: 0.2;
	pointer-events: none;
}

.noti-content :not(span.user-fullname){
    color: var(--textCol) !important;
}

.search-results{
    height: 20rem;
    width: 120%;
    margin-top: 5px;
    border-radius: 10px;
    background-color: var(--readerBg);
    padding: 0.5rem 1rem;
    box-shadow: 0 5px 20px 5px var(--accentSelectedInvert);
}

.search-link{
    color: var(--textCol);
    display: flex;
    padding: 0.3rem;
    border: solid 2px var(--borderColor);
    border-radius: 5px;
    background-color: var(--sidebarCol);
}

.search-link img{
    max-height: 5.6rem;
    max-width: 4.2rem;
}

.search-link .search-details{
    margin-left: 0.5rem;
}

.search-link .search-details .title{
    display: flex;
}

.search-link .search-details .title .chapter{
    font-weight: bold;
    font-size: 18px;
}

.search-tag{
    margin-left: 1rem;
    color: var(--accentCol);
    border: solid 1px var(--accentCol);
    font-size: 12px;
    padding: 0.2rem 0.5rem;
}

.search-link .search-details .chapter-name{
    margin-top: 0.2rem;
    color: var(--textCol);
}

.search-link:hover{
    background-color: var(--accentCol);
    color: var(--accentSelected);
}
.search-link:hover .search-tag,
.search-link:hover .chapter-name{
    color: var(--accentSelected);
    border-color: var(--accentSelected);
}

